--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,20 +5,27 @@
     font-family: 'Oxygen', sans-serif;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
+/* body {
+    background-color: #ebee42;
+} */
+
 /* Home section */
 
 .head-wrapper {
-    height: 90vh;
-    background:  linear-gradient(to top right, #09a45c, #adaead30), url("../images/myImage.jpg") no-repeat right;
-    padding: 2vw 10vw;
+    height: 50vw;
+    background:  linear-gradient(to top right, #8c72a8,  #09a45c);
     color: #543964;
 }
 
 .navbar {
+    padding: 20px 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 20%
 }
 
 .navbar h1 {
@@ -43,20 +50,23 @@
     text-align: center;
 }
 
-.navbar ul li a {
+.navbar ul a {
     color: #da374a;
     text-decoration: none;
 }
 
+
 .navbar ul li:hover {
-    border: 1px solid #da374a;
+    background-color:  #da374a;
     text-align: center;
     border-radius: 5px;
-    color: #da374a;
+    color: #fff;
+    transition: 0.5s;
 }
 
 .description {
     width: 100%;
+    padding: 20px 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -65,75 +75,117 @@
 
 .name {
     width: 40%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around; 
 }
 
-.name .conte {
-    font-size: 20px;
+.my-name{
+    width: max-content;
+}
+
+.major {
+    text-align: center;
+    font-size: 2vw;
     font-weight: bold;
     letter-spacing: 1px;
 }
 
-.name .contenty {
-    font-size: 20px;
-    color: #242426;
+.assessment {
+    font-size: 2vw;
+    color: #fff;
     font-weight: lighter;
-    letter-spacing: 1px;
+    flex: 1;
 }
 
 .name h1 {
-    font-size: 50px;
+    font-size: 4vw;
     color: #da374a;
+}
+
+.hire-me {
+    width: 50%;
+    padding: 10px;
+    background-color: #da374a;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
+    font-size: 1.5vw;
+}
+.hire-me:hover {
+    cursor: pointer;
+    background-color: #c91328;
+    transition: 0.5s;
 }
 
 .description .profile {
     width: 50%;
     height: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+.description .profile img {
+    width: 90%;
+    border: 1px solid #da374a;
+    border-radius: 50%;
 }
 
-/* About section */
+/* skills section */
 
-.about{
-    width: 100%;
-    height: 90vh;
-    padding: 3vw 10vw;
+
+
+/* Projects section */
+
+.projects {
+    height: 60vw;
+    padding: 20px 100px;
 }
 
-.about h1{
-    text-align: center;
-    margin-bottom: 1vw;
-}
-
-.about h2 {
+.projects h1, .projects h2 {
     text-align: center;
     margin-bottom: 2vw;
+    color: #c91328;
+
+}
+
+/* .projects h2 {
+    margin-bottom: 2vw;
     color: #da374a;
-}
+} */
 
-.about-content{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.project-content {
     width: 100%;
+    display: flex;
+    justify-content: space-around;
 }
 
-.left-about img{
-    width: 25vw;
+.project-images{
+    width: 45%;
+    background-color: #8c72a8;
+    margin-bottom: 30px;
+}
+
+.project-images a{
+    color: black;
+    text-decoration: none;
+}
+
+.project-images p{
+    text-align: center;
+    padding: 3px;
+}
+
+.project-images img {
+    width: 100%;
     height: auto;
-}
-
-.right-about {
-    width: 60%;
-}
-
-.right-about p {
-    letter-spacing: 1px;
-    font-size: 20px;
 }
 
 /* services section */
 
-
 .services {
+    height: 640px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -184,48 +236,49 @@
 
 }
 
+/* About section */
 
-/* Projects section */
-
-.projects {
+.about{
+    width: 100%;
+    height: 640px;
     padding: 3vw 10vw;
 }
 
-.projects h1, .projects h2 {
+.about h1{
     text-align: center;
     margin-bottom: 1vw;
 }
 
-.projects h2 {
+.about h2 {
+    text-align: center;
     margin-bottom: 2vw;
     color: #da374a;
 }
 
-.project-content {
-    width: 100%;
+.about-content{
     display: flex;
     justify-content: space-between;
-    margin-bottom: 3vw;
-}
-
-.project-images{
-    width: 30%;
-
-}
-
-.project-images a{
-    color: black;
-    text-decoration: none;
-}
-
-.project-images p{
-    text-align: center;
-}
-
-.project-images img {
+    align-items: center;
     width: 100%;
+}
+
+.left-about img{
+    width: 25vw;
     height: auto;
 }
+
+.right-about {
+    width: 60%;
+}
+
+.right-about p {
+    letter-spacing: 1px;
+    font-size: 20px;
+}
+
+/* contact section*/
+
+/* footer */
 
 footer {
     height: 10vh;
