--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,9 +143,7 @@ html{
 .projects h1 {
     font-size: 3.5vw;
     text-align: center;
-    margin-bottom: 1vw;
     color: #c91328;
-
 }
 
 .projects h2 {
@@ -165,13 +163,12 @@ html{
 .project-images{
     width: 45%;
     margin-bottom: 30px;
-    transition: 0.5s;
 }
 
-.project-images:hover{
+/* .project-images:hover{
     transform: scale(1.1);
     transition: 0.5s;
-}
+} */
 
 .project-images a{
     color: black;
@@ -196,14 +193,12 @@ html{
 .services {
     height: 45vw;
     width: 100%;
-    background-color: #121111;
+    background-color: #aaa4a4;
     padding: 20px 100px;
-    /* padding: 4vw 10vw 6vw; */
 }
 
 .services h1{
     color: #da374a;
-    margin-bottom: 1vw;
     font-size: 3.5vw;
     text-align: center;
 }
@@ -228,6 +223,11 @@ html{
     height: 25vw;
     padding: 2vw;
     text-align: center;
+    transition: 0.5s;
+}
+.boxes:hover{
+    transform: scale(1.1);
+    transition: 0.5s;
 }
 
 .boxes p{
@@ -246,6 +246,7 @@ html{
 
 .boxes:hover {
     background-color: #17816c;
+    color: white;
 }
 
 .boxes h3 {
@@ -258,7 +259,7 @@ html{
 .about{
     padding: 60px 100px;
     width: 100%;
-    height: 60vw;
+    height: 50vw;
     display: flex;
     justify-content: space-between;
 }
@@ -273,33 +274,24 @@ html{
 }
 
 .about-content{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
     width: 50%;
 }
 
-.about h1{
+.right-about h1 {
+    font-size: 3.5vw;
     text-align: center;
-    margin-bottom: 1vw;
-}
-
-.about h2 {
-    text-align: center;
-    margin-bottom: 2vw;
     color: #da374a;
 }
 
-
-/* 
-.right-about {
-    width: 60%;
-} */
+.right-about h2 {
+    font-size: 2vw;
+    text-align: center;
+    color: #543964;
+    margin-bottom: 10px;
+}
 
 .right-about p {
-    letter-spacing: 1px;
-    font-size: 20px;
+    font-size: 2vw;
 }
 
 /* contact section*/
