--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,6 +123,7 @@ html{
     justify-content: flex-end;
     align-items: center;
 }
+
 .description .profile img {
     width: 90%;
     border: 1px solid #da374a;
@@ -164,7 +165,7 @@ html{
     margin-bottom: 30px;
     box-shadow: inset 2px 2px 30px #4eaa7f;
     border-radius: 10px;
-    padding: 50px 50px;
+    padding: 5vw 5vw;
     transition: 0.5s;
 }
 
