--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ html{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: sticky;
 }
 
 .navbar h1 {
@@ -201,7 +202,7 @@ html{
 .services {
     height: 45vw;
     width: 100%;
-    background-color: #aaa4a4;
+    background-color: #e4e4e4;
     padding: 20px 100px;
 }
 
@@ -304,6 +305,17 @@ html{
 
 /* contact section*/
 
+.contact{
+    height: 20vw;
+    width: 100%;
+    background-color: #e4e4e4;
+}
+
+.contact h1{
+    font-size: 3.5vw;
+    text-align: center;
+    color: #da374a;
+}
 
 
 /* footer */
